--- a/categories.html
+++ b/categories.html
@@ -2,10 +2,10 @@
 layout: default
 title: Categories
 description: "文章分类"
-header-img: "Source/images/background/bg-categories.jpg"
+header-img: "/Source/images/background/bg-categories.jpg"
 ---
 <!-- Page Header -->
-<header class="intro-header" style="background-image: url('{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}')">
+<header class="intro-header" style="background-image: url({{ site.baseurl }}{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %})">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 ">
