"使用通用背景音乐播放插件Aplayer && debug"

--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@ header-img: "/Source/images/background/bg-about.jpg"
     data-server="{{site.APlayer.data-server}}" 
     data-type="{{site.APlayer.data-type}}" 
     data-mode="{{site.APlayer.data-mode}}" 
-    data-autoplay="{{site.APlayer.autoplay}}" >
+    data-autoplay="{{site.APlayer.data-autoplay}}" >
 </div>
 {% endif %}
 {% endif %}
