"改善文件结构"

--- a/pages/about.html
+++ b/pages/about.html
@@ -2,6 +2,7 @@
 layout: page
 title: "About Me"
 description: "Hey, this is Quanyin."
+permalink: /about/
 header-img: "/Source/images/background/bg-about.jpg"
 ---
 
