--- a/pages/about.html
+++ b/pages/about.html
@@ -74,9 +74,9 @@ header-img: "/Source/images/background/bg-about.jpg"
 </div>
 {% endif %}-->
 {% if site.APlayer %}
-<script src="//cdnjs.cloudflare.com/ajax/libs/aplayer/1.6.0/APlayer.min.js"></script>	
+<script async src="//cdnjs.cloudflare.com/ajax/libs/aplayer/1.6.0/APlayer.min.js"></script>	
 <!--<script src="//api.i-meto.com/music/player.js"></script>-->
-<script src="/js/meting.aplayer.js"></script>
+<script async src="/js/meting.aplayer.js"></script>
 <div class="aplayer post-container" 
     data-id="{{site.APlayer.data-id}}" 
     data-server="{{site.APlayer.data-server}}" 
