--- a/pages/about.html
+++ b/pages/about.html
@@ -71,11 +71,11 @@ header-img: "/Source/images/background/bg-about.jpg"
         <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" align="middle" width="420" height="260"  src="{{site.netease-music_url}}"></iframe>
     </div>
     {% endif %}
-    {% if site.APlayer %}
-    <script type="text/javascript" async="async" src="//cdnjs.cloudflare.com/ajax/libs/aplayer/1.6.0/APlayer.min.js"></script>	
-    <!--
+    {% if site.APlayer %} <!--不能用异步加载-->
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/aplayer/1.6.0/APlayer.min.js"></script>	
+    <!-- 改用本地化
     <script src="//api.i-meto.com/music/player.js"></script>
-    <script type="text/javascript" async="async" src="/js/meting.aplayer.js"></script>
+    <script type="text/javascript"  src="/js/meting.aplayer.js"></script>
     -->
     <script type="text/javascript" >
         function ready(e){(document.attachEvent?"complete"===document.readyState:"loading"!==document.readyState)?e():document.addEventListener("DOMContentLoaded",e)}ready(function(){function e(e,t){var a=[],r=e.dataset;a.element=e,a.music=t,a.showlrc=a.music[0].lrc?3:0,a.narrow="true"===r.narrow,a.autoplay="true"===r.autoplay,a.mutex="false"!==r.mutex,a.mode=r.mode||"circulation",a.preload=r.preload||"auto",a.listmaxheight=r.listmaxheight||"340px",a.theme=r.theme||"#e6d0b2",new APlayer(a)}console.log("\n %c Meting 1.1.0 %c https://i-meto.com/ghost-aplayer/ \n\n","color: #fff; background-image: linear-gradient(90deg, rgb(47, 172, 178) 0%, rgb(45, 190, 96) 100%); padding:5px 1px;","background-image: linear-gradient(90deg, rgb(45, 190, 96) 0%, rgb(255, 255, 255) 100%); padding:5px 0;");var t="https://api.i-meto.com/meting/api";"undefined"!=typeof meting_api&&(t=meting_api);var a=document.querySelectorAll(".aplayer");Array.prototype.forEach.call(a,function(a){var r=a.dataset.id;if(r){var n=new XMLHttpRequest;n.open("GET",t+"?server="+a.dataset.server+"&type="+a.dataset.type+"&id="+r+"&r="+Math.random(),!0),n.onload=function(){if(n.status>=200&&n.status<400){var t=JSON.parse(n.responseText);e(a,t)}},n.send()}else{var o=[];o.title=a.dataset.title,o.author=a.dataset.author,o.url=a.dataset.url,o.pic=a.dataset.pic,o.lrc=a.dataset.lrc,e(a,[o])}})});
