--- a/_draft/gitment.html
+++ b/_draft/gitment.html
@@ -5,6 +5,7 @@
 <script type="text/javascript" src="//imsun.github.io/gitment/dist/gitment.browser.js" async="async"></script>
 <link rel="stylesheet" href="/css/gitment.min.css" />
 -->
+
 <link rel="stylesheet" href="{{ "/css/gitment.min.css" | prepend: site.baseurl }}" />
 <script  type="text/javascript" src="/js/gitment.min.js" ></script>
 
@@ -12,6 +13,20 @@
 <div style="text-align:center;">
   <button class="btn" id="load-CommentGitment" onclick="CommentGitment.load();">点击加载评论</button>
 </div>
+<!-- 整合到 plugin.less -> plugin.css -> Quanyin-global.css
+<style type="text/css">
+#load-CommentGitment {
+    background-color:#FFFFFF;
+    padding:9px;
+    margin:0 auto;
+    position:relative;
+    font-size:16px;
+    color:#555;
+    text-decoration:none;
+    border: solid 2px #2D2D2D;
+}
+</style>
+-->
 <script>
 var CommentGitment = {
     load:function CommentGitment(){
@@ -34,18 +49,6 @@ var CommentGitment = {
       }
   }
 </script>
-<style type="text/css">
-#load-CommentGitment {
-    background-color:#FFFFFF;
-    padding:9px;
-    margin:0 auto;
-    position:relative;
-    font-size:16px;
-    color:#555;
-    text-decoration:none;
-    border: solid 2px #2D2D2D;
-}
-</style>
 
 
 <!--
